[package]
name = "demostf-mover"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.56"
demostf-client = { version = "0.4.3", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
futures-util = "0.3.30"
main_error = "0.1.2"
time = "0.3.31"
md5 = "0.7.0"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
secretfile = "0.1.0"
clap = { version = "=4.4.18", features = ["derive"] }
